# CareerPlanningAgent

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: README.md  __init__.py
app/backend/: __init__.py  api_server.py
app/docs/: openapi-docs-detailed.md  openapi-docs.md  前端设计需求.txt  相关数据示例.md
app/frontend/: __init__.py  app.py
app/frontend_optimized/: DEPLOYMENT.md  README.md  index.html  package-lock.json  package.json
app/frontend_optimized/src/: App.vue
app/frontend_optimized/src/components/: JobProfileDetail.vue  MatchResultDetail.vue  StudentProfileDetail.vue
app/frontend_optimized/src/router/: index.js
app/frontend_optimized/src/services/: api.js
app/frontend_optimized/src/store/: app.js
app/frontend_optimized/src/utils/: logger.js
app/frontend_optimized/src/views/: Chat.vue  Home.vue  JobAnalysis.vue  Layout.vue  MatchResult.vue  StudentProfile.vue
app/frontend_optimized2/: README.md  index.html  package-lock.json  package.json  start.bat  启动说明.md
app/frontend_optimized2/src/: App.vue  main.js
app/frontend_optimized2/src/api/: index.js  services.js
app/frontend_optimized2/src/assets/: main.css
app/frontend_optimized2/src/router/: index.js
app/frontend_optimized2/src/views/: ChatView.vue  JobProfileView.vue  MatchResultView.vue  StudentProfileView.vue
config/: settings.yaml
database/knowledgebase/: rag_service.py
database/mysql/: database.py
docs/: 主智能体方案修改.txt  主智能体方案修改2.txt  主智能体设计 .md  提示词与工作流构建.txt  测试结果.txt  职业规划智能体设计.md  重新构建方案.md
job_system/: __init__.py  job_service.py
job_system/data_processor/: feature_store.py  job_loader.py
job_system/llm_service/: extractor.py  prompts.py  schemas.py
job_system/orchestrator/: batch_ingestor.py  batch_orchestrator.py  pipeline.py
main_agent/: state.py  workflow.py
main_agent/nodes/: prompts.py  supervisor.py
main_agent/tools/: expert_tools.py
main_agent/utils/: config_loader.py  main_kb.py
matching_engine/src/llm_service/: __init__.py  chain.py  models.py  prompts.py
matching_engine/src/utils/: loaders.py
resources/student_resumes/: test_resume.txt
scripts/: README.md  generate_scripts.py  restart.bat  restart.ps1  restart.py  restart_all.bat  restart_all.ps1  start.bat  start.py  start.sh  start_all.bat  start_all.ps1  start_all.sh
studentprofile_agent/: __init__.py
studentprofile_agent/agentService/: service.py
tests/: test_main_agent.py  test_rag.py
